Codebase audit — 2026-04-21
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>